--- a/Student/menu.html
+++ b/Student/menu.html
@@ -1,19 +1,19 @@
 <div class="function-list">
     <div class="function-list-TT">
-        <a href="/Student/home" class="TT-link"><i class="bi bi-bookmark"></i>Trang chủ</a>
+        <a href="/Student/home" class="TT-link">Quản lý lịch hẹn</a>
     </div>
     <hr class="divider"> 
     <div class="function-list-SV">
-        <a href="/Student/info.html" class="SV-link"><i class="bi bi-person-circle"></i>Sinh viên</a>
+        <a href="/Student/info" class="SV-link" id="student-name-view"></a>
     </div>
     <hr class="divider"> 
     <ul class="function-list-item">
         <li class="item">
-            <a href="" class="item-link"><i class="bi bi-layout-text-window-reverse"></i>Quản lý đồ án</a>
+            <a href="/Student/home" class="item-link"><i class="bi bi-house"></i>Trang chủ</a>
         </li>
         
         <li class="item">
-            <a href="/Student/group.html" class="item-link"><i class="bi bi-list-check"></i>Danh sách nhóm đề tài</a>
+            <a href="/Student/group" class="item-link"><i class="bi bi-layout-text-window-reverse"></i>Danh sách nhóm đề tài</a>
         </li>
     </ul>
 </div>
