--- a/Teacher/menu.html
+++ b/Teacher/menu.html
@@ -1,13 +1,16 @@
 <div class="function-list">
     <div class="function-list-TT">
-        <a href="/Teacher/home" class="TT-link"><i class="bi bi-bookmark"></i>Trang chủ</a>
+        <a href="/Teacher/home" class="TT-link">Quản lý lịch hẹn</a>
     </div>
     <hr class="divider">
     <div class="function-list-GV">
-        <a href="/Teacher/info" class="GV-link"><i class="bi bi-person-circle"></i>Giảng viên</a>
+        <a href="/Teacher/info" class="GV-link" id="teacher-name-view"></a>
     </div>
     <hr class="divider">
     <ul class="function-list-item">
+        <li class="item">
+            <a href="/Teacher/home" class="item-link"><i class="bi bi-house"></i>Trang chủ</a>
+        </li>
         <li class="item">
             <a href="/Teacher/group" class="item-link"><i class="bi bi-layout-text-window-reverse"></i>Quản lý nhóm sinh viên</a>
         </li>
