--- a/Student/appointment.html
+++ b/Student/appointment.html
@@ -17,16 +17,16 @@
         <div id="menu-container"></div>
         <div class="right-panel">
             <nav class="navigation-bar">
-                <i class="bi bi-list navigation-icon"></i>
-                <a href="/" class="navigation-link"><i class="bi bi-box-arrow-right"></i></a>
+                <a href="/" class="log-out"><i class="bi bi-box-arrow-right"></i></a>
             </nav>
             <div class="home-link-container">
-                <a href="" class="home-link">Danh sách lịch hẹn</a>
+                <a href="" class="home-link" id="home-link"></a>
             </div>
             <div class="appointment-add-container">
-                <a href="" class="appointment-add-link">Thêm lịch hẹn</a>
-            </div>
+                    <a href="" class="appointment-add-link"><i class="bi bi-plus-circle"></i> Tạo lịch hẹn</a>
+                </div>
             <div class="appointment-table-container">
+                
                 <table class="appointment-table">
                     <thead>
                         <tr>
@@ -96,6 +96,10 @@
                         <div class="tab-pane show active" id="personalAppointment" role="tabpanel">
                             <form id="personalAppointmentForm" class="pt-3">
                                 <div class="mb-3">
+                                    <label for="personalGroupName" class="form-label">Nhóm đề tài</label>
+                                    <div id="personalGroupName" class="form-control" readonly></div>
+                                </div>
+                                <div class="mb-3">
                                     <label for="personalDate" class="form-label">Ngày hẹn</label>
                                     <input type="date" class="form-control" id="personalDate">
                                 </div>
@@ -134,6 +138,10 @@
                         </div>
                         <div class="tab-pane" id="groupAppointment" role="tabpanel">
                             <form id="groupAppointmentForm" class="pt-3">
+                                <div class="mb-3">
+                                    <label for="groupGroupName" class="form-label">Nhóm đề tài</label>
+                                    <div id="groupGroupName" class="form-control" readonly></div>
+                                </div>
                                 <div class="mb-3">
                                     <label for="groupDate" class="form-label">Ngày hẹn</label>
                                     <input type="date" class="form-control" id="groupDate">
@@ -186,6 +194,13 @@
             .then(response => response.text())
             .then(data => {
                 document.getElementById('menu-container').innerHTML = data;
+                fetch('/Student/getFullname')
+                    .then(response => response.json())
+                    .then(menu => {
+                        const studentNameView = document.getElementById('student-name-view');
+                        studentNameView.innerHTML = `<i class="bi bi-person-circle"></i>SV: ${menu.fullname}`;
+                    })
+                    .catch(error => console.error('Error fetching menu:', error));
             })
             .catch(error => console.error('Error fetching menu:', error));
     </script>
