--- a/Teacher/freecalendar.html
+++ b/Teacher/freecalendar.html
@@ -15,12 +15,11 @@
     <div class="container-fluid">
         <div id="menu-container"></div>
         <div class="right-panel">
-            <nav class="navigation">
-                <i class="bi bi-list"></i>
-                <a href="/"><i class="bi bi-box-arrow-right"></i></a>
+            <nav class="navigation-bar">
+                <a href="/" class="log-out"><i class="bi bi-box-arrow-right"></i></a>
             </nav>
-            <div class="link-container">
-                <a href="" class="link">Quản lý lịch rảnh</a>
+            <div class="home-link-container">
+                <a href="" class="home-link">Quản lý lịch rảnh</a>
             </div>
             
             <div class="row g-0">
@@ -73,6 +72,13 @@
             .then(response => response.text())
             .then(data => {
                 document.getElementById('menu-container').innerHTML = data;
+                fetch('/Teacher/getFullname')
+                    .then(response => response.json())
+                    .then(menu => {
+                        const teacherNameView = document.getElementById('teacher-name-view');
+                        teacherNameView.innerHTML = `<i class="bi bi-person-circle"></i>GV: ${menu.fullname}`;
+                    })
+                    .catch(error => console.error('Error fetching menu:', error));
             })
             .catch(error => console.error('Error fetching menu:', error));
     </script>
