--- a/Teacher/project.html
+++ b/Teacher/project.html
@@ -18,16 +18,15 @@
         <div id="menu-container"></div>
         <div class="right-panel">
             <nav class="navigation-bar">
-                <i class="bi bi-list navigation-icon"></i>
-                <a href="/" class="navigation-link"><i class="bi bi-box-arrow-right"></i></a>
+                <a href="/" class="log-out"><i class="bi bi-box-arrow-right"></i></a>
             </nav>
             <div class="home-link-container">
                 <a href="" class="home-link">Danh sách đề tài</a>
             </div>
-            <div class="project-add-container">
-                <a href="" class="project-add-link">Thêm đề tài</a>
-            </div>
             <div class="project-table-container">
+                <div class="project-add-container">
+                    <a href="" class="project-add-link"><i class="bi bi-plus-circle"></i> Tạo đề tài</a>
+                </div>
                 <table class="project-table">
                     <thead>
                         <tr>
@@ -113,6 +112,13 @@
             .then(response => response.text())
             .then(data => {
                 document.getElementById('menu-container').innerHTML = data;
+                fetch('/Teacher/getFullname')
+                    .then(response => response.json())
+                    .then(menu => {
+                        const teacherNameView = document.getElementById('teacher-name-view');
+                        teacherNameView.innerHTML = `<i class="bi bi-person-circle"></i>GV: ${menu.fullname}`;
+                    })
+                    .catch(error => console.error('Error fetching menu:', error));
             })
             .catch(error => console.error('Error fetching menu:', error));
     </script>
